AdminPanel-Add admin

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,23 +6,23 @@
      android:background="@drawable/background"
      android:layout_height="match_parent">
     <LinearLayout
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="100dp"
             android:gravity="center"
             android:orientation="vertical"
             android:layout_width="match_parent" android:layout_height="wrap_content">
         <ImageView
                 android:id="@+id/client"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_width="240dp" android:layout_height="170dp"
         android:src="@mipmap/ic_launcher"/>
         <ImageView
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:id="@+id/employee"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_width="240dp" android:layout_height="170dp"
                 android:src="@mipmap/ic_launcher"/>
         <ImageView
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:id="@+id/admin"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_width="240dp" android:layout_height="170dp"
                 android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
 
