--- a/app/src/main/res/layout/activity_ongoingprojects.xml
+++ b/app/src/main/res/layout/activity_ongoingprojects.xml
@@ -3,21 +3,27 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/background"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
             android:id="@+id/inside_pager"
-            android:layout_width="wrap_content"
+            android:background="@drawable/background"
+            android:layout_width="match_parent"
             android:layout_height="400dp"
-            />
+            android:padding="20dp"
+            android:layout_gravity="center"/>
+
 
     <dot10tech.com.dot10projects.UI.IndefinitePagerIndicator
-            android:id="@+id/recyclerview_pager_indicator"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            app:dotColor="@color/colorPrimary"
-            app:selectedDotColor="@color/colorPrimaryDark"
+            android:layout_below="@+id/inside_pager"
+            android:id="@+id/pager_indicator"
+            android:gravity="center"
+            app:dotColor="@color/dot_color"
+            app:selectedDotColor="@color/selected_dot_color"
             app:dotRadius="5dp"
+            android:layout_centerHorizontal="true"
             app:selectedDotRadius="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
