--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="black_overlay">#66000000</color>
     <color name="default_selected_dot_color">#ffffff</color>
     <color name="default_dot_color">#e8e8e8</color>
+    <color name="transparent">#00000000</color>
+    <color name="selected_dot_color">#AD7649</color>
+    <color name="dot_color">#DFB483</color>
 </resources>
