--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Toolbar
+<android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/background"
         android:layout_width="match_parent"
@@ -7,6 +7,10 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_height="?actionBarSize">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
     <ImageView
             android:layout_width="wrap_content"
             android:id="@+id/icon"
@@ -18,5 +22,6 @@
             android:src="@drawable/projects"
             android:layout_height="match_parent" />
 
+    </LinearLayout>
 
-</Toolbar>
+</android.support.v7.widget.Toolbar>
