--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/profile"
+          android:title="Profile"
+          android:orderInCategory="100"
+          app:showAsAction="never"/>
+    <item android:id="@+id/addremoveuser"
+          android:title="Add/Remove User"
+          android:orderInCategory="100"
+          app:showAsAction="never"/>
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+          android:title="sample_text"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
