--- a/app/src/main/res/layout/activity_editasadmin.xml
+++ b/app/src/main/res/layout/activity_editasadmin.xml
@@ -1,49 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/background"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_height="match_parent">
 
     <TextView
-            android:id="@+id/weeklyactivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textSize="25dp"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:text="Weekly Activities" />
-    <EditText
-            android:id="@+id/activity"
+            android:id="@+id/choose"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Activity"
-            android:layout_margin="10dp"
-            android:layout_below="@+id/weeklyactivity"
-    />
-    <Spinner
-            android:id="@+id/day"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_below="@+id/activity"
-            android:entries="@array/days"
-            android:layout_height="wrap_content"></Spinner>
+              android:textColor="#FFF"
+              android:text="CHOOSE CLIENT TO EDIT"
+              android:textStyle="normal"
+                android:textAlignment="center"
+              android:textAppearance="@style/TextAppearance.AppCompat.Large"
+              android:layout_height="wrap_content"/>
 
-    <Button
-            android:id="@+id/addactivity"
+    <android.support.v4.view.ViewPager
+            android:layout_below="@+id/choose"
+            android:id="@+id/inside_pager"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/day"
-            android:layout_below="@+id/day"
-            android:background="@color/colorAccent"
-            android:padding="15dp"
-            android:layout_marginTop="29dp"
-            android:text="Add Activity"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:textSize="20dp" />
+            android:layout_height="400dp"
+            android:padding="20dp"
+            android:layout_gravity="center"/>
+
+
+    <dot10tech.com.dot10projects.UI.IndefinitePagerIndicator
+            android:layout_below="@+id/inside_pager"
+            android:id="@+id/pager_indicator"
+            android:gravity="center"
+            app:dotColor="@color/dot_color"
+            app:selectedDotColor="@color/selected_dot_color"
+            app:dotRadius="5dp"
+            android:layout_centerHorizontal="true"
+            app:selectedDotRadius="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 </RelativeLayout>
