--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="default_selected_dot_color">#ffffff</color>
     <color name="default_dot_color">#e8e8e8</color>
     <color name="transparent">#00000000</color>
+    <color name="white">#FFF</color>
+    <color name="unchanged">#CC0000</color>
+    <color name="changed">#00FF41</color>
     <color name="selected_dot_color">#AD7649</color>
     <color name="dot_color">#DFB483</color>
     <color name="orange">#FFA500</color>
