--- a/app/src/main/res/layout/activity_adminoptions.xml
+++ b/app/src/main/res/layout/activity_adminoptions.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/clientbg"
         android:layout_height="match_parent">
 
@@ -17,6 +18,97 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="20sp"
             android:layout_height="55dp"/>
+    <LinearLayout
+            android:id="@+id/titles"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_below="@+id/clientNameinTitle"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+
+            android:layout_height="wrap_content">
+        <TextView
+                android:textAlignment="center"
+                android:text="NAME"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:id="@+id/names"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+                android:text="ASSIGNMENT"
+                android:textAlignment="center"
+                android:id="@+id/assignments"
+                android:layout_width="150dp"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+                android:id="@+id/affliation"
+                android:text="AFFLIATION"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+
+<LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/titles"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+    <ListView
+            android:id="@+id/names_list"
+
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+            android:id="@+id/assignments_list"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+            android:id="@+id/affliation_list"
+
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+</LinearLayout>
 
 
 
