--- a/app/src/main/res/layout/activity_editclientdetail.xml
+++ b/app/src/main/res/layout/activity_editclientdetail.xml
@@ -14,170 +14,58 @@
             <ImageView
                     android:id="@+id/mast"
                     android:src="@mipmap/ic_launcher"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="30dp"
                     android:layout_gravity="center"
                     android:layout_width="150dp"
                     android:layout_height="200dp"/>
             <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                 <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                          android:text="Client Name"
-                          android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/clientname_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Client Name"
-
-                        android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                android:background="@color/selected_dot_color"
+                android:id="@+id/editProjectTab"
+                android:layout_width="wrap_content"
+                android:padding="10dp"
+                android:gravity="center"
+                android:textColor="#FFF"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:text="Edit Project"
+                android:layout_height="match_parent"/>
                 <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
+                        android:background="@drawable/progressbg"
+                        android:id="@+id/editTeamTab"
+                        android:layout_width="150dp"
+                        android:padding="10dp"
                         android:gravity="center"
                         android:textColor="#FFF"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Start Date"
+                        android:text="Edit Team"
+                        android:layout_height="40dp"/>
+                <TextView
+                        android:background="@drawable/progressbg"
+                        android:id="@+id/sample_textTab"
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:textColor="#FFF"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:text="sample_text"
+
                         android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/startdate_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Start Date"
-
-                        android:layout_height="wrap_content"/>
-
 
             </LinearLayout>
 
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Project Deadline"
-                        android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/deadline_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Project Deadline"
+<LinearLayout
 
-                        android:layout_height="wrap_content"/>
+        android:id="@+id/swap"
+        android:orientation="vertical"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
 
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Overall Progress"
-                        android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/op_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Overall Progress"
-
-                        android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Latest Activity"
-                        android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/la_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Latest Activity"
-
-                        android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Task Deadline"
-                        android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/td_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Task Deadline"
-
-                        android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:layout_marginStart="30dp"
-                        android:layout_width="wrap_content"
-                        android:gravity="center"
-                        android:textColor="#FFF"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:text="Task Status"
-                        android:layout_height="match_parent"/>
-                <EditText
-                        android:id="@+id/ts_et"
-                        android:layout_marginStart="20dp"
-                        android:layout_width="match_parent"
-                        android:hint="Task Status"
-
-                        android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
+</LinearLayout>
 
 
             <TextView
