--- a/app/src/main/res/layout/updowntest.xml
+++ b/app/src/main/res/layout/updowntest.xml
@@ -1,51 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:background="@drawable/background"
-                android:layout_height="match_parent"
-                tools:context=".UI.UploadImage">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="16dp"
+              tools:context="org.snowcorp.imageupload.MainActivity"
+              android:orientation="vertical">
     <TextView
-            android:id="@+id/weeklyactivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textSize="25dp"
-            android:textColor="#FFF"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:text="New Project" />
-
-    <EditText
-            android:id="@+id/activity"
-            android:layout_width="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Upload Image using Volley"
+            android:id="@+id/textView"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"/>
+    <Button
+            android:id="@+id/button_choose"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Client Name"
-            android:theme="@style/Widget.AppCompat.EditText"
-            android:textColor="#FFF"
-            android:layout_margin="10dp"
-            android:layout_below="@+id/weeklyactivity"/>
-
-    <LinearLayout
-            android:layout_width="match_parent"
+            android:background="@color/colorAccent"
+            android:text="Browse Image"
+            android:textColor="#fff"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:padding="10dp"/>
+    <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/background"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:layout_margin="20dp"/>
+    <Button
+            android:id="@+id/button_upload"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:orientation="vertical">
-
-
-        <Button
-                android:id="@+id/buttonUploadImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Click to Upload" />
-
-        <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-    </LinearLayout>
-</RelativeLayout>
+            android:background="@color/colorAccent"
+            android:text="upload"
+            android:textColor="#fff"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"/>
+</LinearLayout>
