--- a/app/src/main/res/layout/activity_addprojectasadmin.xml
+++ b/app/src/main/res/layout/activity_addprojectasadmin.xml
@@ -1,60 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/background">
     <TextView
-            android:id="@+id/weeklyactivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textSize="25dp"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:text="New Project" />
-    <EditText
-            android:id="@+id/activity"
+            android:layout_marginTop="10dp"
+            android:id="@+id/projecttitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Client Name"
-            android:layout_margin="10dp"
-            android:layout_below="@+id/weeklyactivity"
-    />
-    <Button
-            android:id="@+id/uploadimage"
-            android:layout_width="200dp"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/activity"
-            android:background="@color/colorAccent"
-            android:padding="15dp"
-            android:layout_marginTop="29dp"
-            android:text="Upload Image"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:textSize="20dp" />
+            android:text="sample"
+            android:textColor="@color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"/>
+
+
     <ImageView
-            android:id="@+id/iv"
-            android:layout_width="300dp"
-            android:layout_height="300dp"/>
+            android:layout_below="@+id/projecttitle"
+            android:id="@+id/mast"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="200dp"
+            android:src="@mipmap/ic_launcher"
+            android:layout_height="200dp"/>
+
+
+    <EditText
+
+            android:layout_marginTop="30dp"
+            android:hint="Start Date (DD/MM/YY)"
+            android:id="@+id/startDate"
+            android:layout_below="@+id/mast"
+            android:layout_width="280dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="?actionBarSize"/>
+
+    <EditText
+
+            android:hint="Deadline (DD/MM/YY)"
+            android:id="@+id/deadline"
+            android:layout_below="@+id/startDate"
+            android:layout_width="280dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="?actionBarSize"/>
+    <EditText
+
+            android:hint="First Task"
+            android:id="@+id/firsttask"
+            android:layout_below="@+id/deadline"
+            android:layout_width="280dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="?actionBarSize"/>
+
+    <EditText
+
+            android:hint="Task Deadline (DD/MM/YY)"
+            android:id="@+id/firsttaskdeadline"
+            android:layout_below="@+id/firsttask"
+            android:layout_width="280dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="?actionBarSize"/>
+
 
     <Button
-            android:id="@+id/addactivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/activity"
-            android:layout_below="@+id/uploadimage"
-            android:background="@color/colorAccent"
-            android:padding="15dp"
-            android:layout_marginTop="29dp"
-            android:text="Start"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:textSize="20dp" />
+            android:layout_below="@+id/firsttaskdeadline"
+            android:id="@+id/addc"
+            android:layout_marginTop="30dp"
+            android:layout_width="250dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="?actionBarSize"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="@string/create_project"
+            android:layout_centerVertical="true"
+            android:background="@drawable/progressbg"/>
+
+
+
 </RelativeLayout>
