--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -4,5 +4,9 @@
         android:layout_width="match_parent"
         android:background="@drawable/background"
         android:layout_height="match_parent">
+    <TextView
+            android:id="@+id/cat"
+            android:layout_width="match_parent"
+              android:layout_height="wrap_content"/>
 
 </RelativeLayout>
