--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+        android:id="@+id/root_layout"
         android:background="@drawable/background"
         xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
+         android:layout_width="match_parent"
 
-                                             android:layout_height="match_parent">
+         android:layout_height="match_parent">
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent" android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
     <ImageView
@@ -38,6 +40,7 @@
 
         <ImageView
                 android:id="@+id/login"
+                android:src="@mipmap/ic_launcher"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
                 android:layout_width="100dp"
