--- a/app/src/main/res/layout/chatbox_item.xml
+++ b/app/src/main/res/layout/chatbox_item.xml
@@ -9,27 +9,48 @@
                 android:paddingTop="16dp"
                 tools:context=".MainActivity">
 
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:id="@+id/card_view"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginRight="10dp"
-                                    android:layout_marginTop="0dp"
-                                    card_view:cardCornerRadius="4dp">
+<android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="0dp"
+        card_view:cardCornerRadius="4dp">
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@drawable/background"
+            android:layout_height="150dp"
+            android:orientation="horizontal">
+
+        <ImageView
+                android:layout_width="80dp"
+                android:layout_height="?actionBarSize"
+                android:layout_marginTop="10dp"
+
+                android:id="@+id/iv"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/burger"/>
 
         <LinearLayout
                 android:orientation="vertical"
                 android:background="@drawable/progressbg"
-                android:layout_width="match_parent" android:layout_height="90dp">
+                android:layout_width="match_parent"
+                android:layout_height="160dp">
             <TextView
-                    android:id="@+id/message"
+                    android:id="@+id/postername"
+                    android:text="sample"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:layout_marginStart="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"/>
+            <TextView
+                    android:id="@+id/messagecomment"
                     android:text="sample"
                     android:textSize="18sp"
                     android:textColor="@color/white"
@@ -48,13 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
-        <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/iv"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/burger"/>
+
 
     </LinearLayout>
 
