--- a/app/src/main/res/layout/activity_chatbox.xml
+++ b/app/src/main/res/layout/activity_chatbox.xml
@@ -1,18 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
         android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@drawable/background"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
 
-
 <android.support.v7.widget.RecyclerView
         android:id="@+id/cbox"
         android:layout_width="match_parent"
+        android:layout_marginBottom="?actionBarSize"
         android:layout_height="wrap_content">
 
 </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+
+    <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+    <Button
+            android:id="@+id/chatcomment"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_width="200dp"
+            android:text="COMMENT"
+            android:drawableLeft="@drawable/ic_menu_send"
+            android:layout_height="?actionBarSize"/>
+
+    <Button
+            android:id="@+id/chatpic"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_width="200dp"
+            android:drawableStart="@drawable/ic_menu_camera"
+            android:text="POST A PICTURE"
+            android:layout_height="?actionBarSize"/>
+    </LinearLayout>
+
+</RelativeLayout>
