--- a/app/src/main/res/layout/activity_employeedashboard.xml
+++ b/app/src/main/res/layout/activity_employeedashboard.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-         android:layout_width="match_parent"
+        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/background"
-         android:layout_height="match_parent">
+        android:layout_height="match_parent">
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -166,10 +166,6 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
-                <ImageView
-                        android:id="@+id/fulls"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
