--- a/app/src/main/res/layout/activity_employeedashboard.xml
+++ b/app/src/main/res/layout/activity_employeedashboard.xml
@@ -126,46 +126,7 @@
 
         </LinearLayout>
 
-        <Button
-                android:id="@+id/reportcomment"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_width="200dp"
-                android:text="REPORT A COMMENT"
-                android:drawableLeft="@drawable/ic_menu_send"
-                android:layout_height="?actionBarSize"/>
 
-        <Button
-                android:id="@+id/sendpic"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_width="200dp"
-                android:drawableStart="@drawable/ic_menu_camera"
-                android:text="POST A PICTURE"
-                android:layout_height="?actionBarSize"/>
-        <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content">
-
-            <ImageView
-                    android:src="@mipmap/ic_launcher"
-                    android:id="@+id/mImageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"/>
-
-            <TextView
-                    android:id="@+id/timestamp"
-                    android:layout_marginStart="10dp"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
 
             </LinearLayout>
 
@@ -174,5 +135,25 @@
 
 
     </LinearLayout>
+    <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:gravity="end"
+            android:layout_width="match_parent" android:layout_height="wrap_content">
+        <TextView
+
+                android:text="Swipe left for reporting screen"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="18sp"
+                android:layout_gravity="center"
+                android:textColor="#FFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"/>
+        <ImageView
+                android:src="@drawable/right_chevron"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
