--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,9 +12,9 @@
             android:orientation="horizontal"
             android:layout_height="wrap_content">
     <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:id="@+id/icon"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_launcher"
             android:layout_height="match_parent" />
     <ImageView
             android:layout_width="120dp"
